NetBSD Problem Report #57320

From www@netbsd.org  Mon Apr  3 21:16:08 2023
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B7BC51A9239
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  3 Apr 2023 21:16:08 +0000 (UTC)
Message-Id: <20230403211607.A01301A923A@mollari.NetBSD.org>
Date: Mon,  3 Apr 2023 21:16:07 +0000 (UTC)
From: jspath55@gmail.com
Reply-To: jspath55@gmail.com
To: gnats-bugs@NetBSD.org
Subject: ATF test case kernel/t_magic_symlinks:machine_arch fails on RPI02W/evbarm only
X-Send-Pr-Version: www-1.0

>Number:         57320
>Category:       kern
>Synopsis:       ATF test case kernel/t_magic_symlinks:machine_arch fails on RPI02W/evbarm only
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    gutteridge
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Apr 03 21:20:00 +0000 2023
>Closed-Date:    Tue May 30 00:09:52 +0000 2023
>Last-Modified:  Tue May 30 00:09:52 +0000 2023
>Originator:     Jim Spath
>Release:        10.0_BETA
>Organization:
>Environment:
NetBSD apie 10.0_BETA NetBSD 10.0_BETA (GENERIC) #0: Fri Jan 13 19:15:32 UTC 2023  mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/evbarm/compile/GENERIC evbarm

>Description:
Automated test framework case kernel/t_magic_symlinks:machine_arch fails on one tested architecture (evbarm) only. Succeeds on other architectures.

Results on failing machine:

# atf-run kernel/t_magic_symlinks:machine_arch
Content-Type: application/X-atf-tps; version="3"

info: atf.version, Automated Testing Framework 0.20 (atf-0.20)
info: tests.root, /usr/tests
[...]
tp-start: 1680556207.977608, kernel/t_magic_symlinks, 1
tc-start: 1680556207.977683, machine_arch
tc-so:Initialized vfs.generic.magiclinks=1
tc-se:cd: can't cd to link
tc-so:Restored vfs.generic.magiclinks=0
tc-end: 1680556208.316461, machine_arch, failed, kernel does not handle magic symlinks properly
tp-end: 1680556208.322627, kernel/t_magic_symlinks
info: time.end, Mon Apr 3 21:10:08 UTC 2023


Results on an aarch64 machine:
[...]
tp-start: 1680556322.15265, kernel/t_magic_symlinks, 1
tc-start: 1680556322.15428, machine_arch
tc-so:Initialized vfs.generic.magiclinks=1
tc-so:Restored vfs.generic.magiclinks=0
tc-end: 1680556322.125354, machine_arch, passed
tp-end: 1680556322.125689, kernel/t_magic_symlinks
info: time.end, Mon Apr 3 21:12:02 UTC 2023


>How-To-Repeat:
Run as root: atf-run kernel/t_magic_symlinks:machine_arch

>Fix:
Unknown.
It seems unrelated to a different PR in the same test area - kern/57319 - though both display messages about failed "cd to link".

>Release-Note:

>Audit-Trail:
From: "David H. Gutteridge" <david@gutteridge.ca>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch
 fails on RPI02W/evbarm only
Date: Tue, 11 Apr 2023 23:30:40 -0400

 This is occurring because the test assumes that @machine_arch will
 resolve to the same value as "uname -p". For your hardware, this isn't
 the case. "uname -p" returns (I assume) "earmv6hf" (as would "sysctl
 hw.machine_arch"). However, @machine_arch there becomes simply "earm",
 so there's a mismatch.

 This error is also appearing in our automated evbarm tests, and I was
 able to reproduce it myself on a Raspberry Pi Model B.

 Arguably, this is a bug, as it doesn't match what symlink(7) states
 (that @machine_arch matches "uname -p"). It doesn't seem useful to
 resolve instead to a value only the kernel interally sees, so I think
 vfs_lookup.c might reasonably be tweaked to set the value expected by
 userland. (Now, I may have misread something along the way. This is
 all new to me.)

 Dave

State-Changed-From-To: open->analyzed
State-Changed-By: gutteridge@NetBSD.org
State-Changed-When: Wed, 12 Apr 2023 03:38:19 +0000
State-Changed-Why:
PR was analyzed.

Responsible-Changed-From-To: kern-bug-people->gutteridge
Responsible-Changed-By: gutteridge@NetBSD.org
Responsible-Changed-When: Wed, 12 Apr 2023 03:50:41 +0000
Responsible-Changed-Why:
Take this (unless someone with more internals knowledge wants to grab it).

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch
 fails on RPI02W/evbarm only
Date: Wed, 12 Apr 2023 07:47:34 +0200

 On Wed, Apr 12, 2023 at 03:35:02AM +0000, David H. Gutteridge wrote:
 >  This is occurring because the test assumes that @machine_arch will
 >  resolve to the same value as "uname -p". For your hardware, this isn't
 >  the case. "uname -p" returns (I assume) "earmv6hf" (as would "sysctl
 >  hw.machine_arch"). However, @machine_arch there becomes simply "earm",
 >  so there's a mismatch.

 I am confused. uname -p and -m print hw.machine ("evbarm") and
 hw.machine_arch ("earmv6hf") respectively. Those are the values that
 the magic symlinks should use too (and I think they do).

 Where does the ABI name ("earm") come into play?

 Martin

From: mlelstv@serpens.de (Michael van Elst)
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch fails on RPI02W/evbarm only
Date: Wed, 12 Apr 2023 08:45:54 -0000 (UTC)

 martin@duskware.de (Martin Husemann) writes:

 > I am confused. uname -p and -m print hw.machine ("evbarm") and
 > hw.machine_arch ("earmv6hf") respectively. Those are the values that
 > the magic symlinks should use too (and I think they do).
 > 
 > Where does the ABI name ("earm") come into play?

 vfs uses the compile time constant MACHINE_ARCH == "earm". It might
 better use the variable machine_arch, but that wouldn't change
 anything.

 MACHINE_ARCH is set in arm/param.h, when not overriden by
 build.sh, the kernel only uses earm, arm, earmeb or armeb.

 Userland gets more refined values depending on the compiler
 target.


 sysctl uses (P)->p_md.md_march, which is initially MACHINE_ARCH
 but then gets overridden by ep_machine_arch which is the
 ELF_NOTE_MARCH_NAME of the executable currently running.

 Displaying notes found in: .note.netbsd.march
   Owner                Data size        Description
   NetBSD                0x00000009      MARCH <earmv6hf>


 Changing vfs to use PROC_MACHINE_ARCH(p) might help, but
 PROC_MACHINE_ARCH is a MD thing (arm + mips). sysctl defaults
 to use machine_arch if the arch doesn't define the macro.

From: "David H. Gutteridge" <david@gutteridge.ca>
To: gnats-bugs@netbsd.org, mlelstv@serpens.de, martin@duskware.de
Cc: 
Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch
 fails on RPI02W/evbarm only
Date: Wed, 19 Apr 2023 21:59:29 -0400

 On Wed, 2023-04-12 at 08:50 +0000, Michael van Elst wrote:
 > The following reply was made to PR kern/57320; it has been noted by
 > GNATS.
 >=20
 > From: mlelstv@serpens.de=C2=A0(Michael van Elst)
 > To: gnats-bugs@netbsd.org
 > Cc:=20
 > Subject: Re: kern/57320: ATF test case
 > kernel/t_magic_symlinks:machine_arch fails on RPI02W/evbarm only
 > Date: Wed, 12 Apr 2023 08:45:54 -0000 (UTC)
 >=20
 > =C2=A0martin@duskware.de=C2=A0(Martin Husemann) writes:
 > =C2=A0
 > =C2=A0> I am confused. uname -p and -m print hw.machine ("evbarm") and
 > =C2=A0> hw.machine_arch ("earmv6hf") respectively. Those are the values
 > that
 > =C2=A0> the magic symlinks should use too (and I think they do).
 > =C2=A0>=20
 > =C2=A0> Where does the ABI name ("earm") come into play?
 > =C2=A0
 > =C2=A0vfs uses the compile time constant MACHINE_ARCH =3D=3D "earm". It m=
 ight
 > =C2=A0better use the variable machine_arch, but that wouldn't change
 > =C2=A0anything.
 > =C2=A0
 > =C2=A0MACHINE_ARCH is set in arm/param.h, when not overriden by
 > =C2=A0build.sh, the kernel only uses earm, arm, earmeb or armeb.
 > =C2=A0
 > =C2=A0Userland gets more refined values depending on the compiler
 > =C2=A0target.
 > =C2=A0
 > =C2=A0
 > =C2=A0sysctl uses (P)->p_md.md_march, which is initially MACHINE_ARCH
 > =C2=A0but then gets overridden by ep_machine_arch which is the
 > =C2=A0ELF_NOTE_MARCH_NAME of the executable currently running.
 > =C2=A0
 > =C2=A0Displaying notes found in: .note.netbsd.march
 > =C2=A0=C2=A0 Owner=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=
 =C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0 Data size=C2=A0=C2=A0=C2=A0=C2=A0=C2=
 =A0=C2=A0=C2=A0 Description
 > =C2=A0=C2=A0 NetBSD=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=
 =C2=A0=C2=A0=C2=A0=C2=A0=C2=A0=C2=A0 0x00000009=C2=A0=C2=A0=C2=A0=C2=A0=C2=
 =A0 MARCH <earmv6hf>
 > =C2=A0
 > =C2=A0
 > =C2=A0Changing vfs to use PROC_MACHINE_ARCH(p) might help, but
 > =C2=A0PROC_MACHINE_ARCH is a MD thing (arm + mips). sysctl defaults
 > =C2=A0to use machine_arch if the arch doesn't define the macro.

 Thanks, Michael, that's what I was alluding to without giving any useful
 details. :) I imagine given that magic symlinks are not enabled by
 default and that what's happening here is contrary to documentation and
 what someone would probably prefer in order for it to be useful on these
 specific architectures, change here is probably not controversial?

 Dave

From: Michael van Elst <mlelstv@serpens.de>
To: "David H. Gutteridge" <david@gutteridge.ca>
Cc: gnats-bugs@netbsd.org, martin@duskware.de
Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch
 fails on RPI02W/evbarm only
Date: Thu, 20 Apr 2023 07:19:42 +0200

 On Wed, Apr 19, 2023 at 09:59:29PM -0400, David H. Gutteridge wrote:
 > >  
 > >  Changing vfs to use PROC_MACHINE_ARCH(p) might help, but
 > >  PROC_MACHINE_ARCH is a MD thing (arm + mips). sysctl defaults
 > >  to use machine_arch if the arch doesn't define the macro.
 > 
 > Thanks, Michael, that's what I was alluding to without giving any useful
 > details. :) I imagine given that magic symlinks are not enabled by
 > default and that what's happening here is contrary to documentation and
 > what someone would probably prefer in order for it to be useful on these
 > specific architectures, change here is probably not controversial?


 I guess the only controversial thing would be to make PROC_MACHINE_ARCH
 something machine-independent, if it should be hidden behind a new
 public symbol, or if it should be a hack in vfs_lookup.c :)


 Greetings,
 -- 
                                 Michael van Elst
 Internet: mlelstv@serpens.de
                                 "A potential Snark may lurk in every tree."

From: Michael van Elst <mlelstv@serpens.de>
To: "David H. Gutteridge" <david@gutteridge.ca>
Cc: gnats-bugs@netbsd.org, martin@duskware.de
Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch
 fails on RPI02W/evbarm only
Date: Thu, 20 Apr 2023 08:53:45 +0200

 On Thu, Apr 20, 2023 at 07:19:50AM +0200, Michael van Elst wrote:

 > I guess the only controversial thing would be to make PROC_MACHINE_ARCH
 > something machine-independent, if it should be hidden behind a new
 > public symbol, or if it should be a hack in vfs_lookup.c :)

 This here seems to work:

 Index: sys/sys/proc.h
 ===================================================================
 RCS file: /cvsroot/src/sys/sys/proc.h,v
 retrieving revision 1.370
 diff -p -u -r1.370 proc.h
 --- sys/sys/proc.h      9 May 2022 13:27:24 -0000       1.370
 +++ sys/sys/proc.h      20 Apr 2023 06:49:21 -0000
 @@ -593,6 +593,10 @@ _proclist_skipmarker(struct proc *p0)
  #define PROC_DBREGSZ(p) (((p)->p_flag & PK_32) ? \
      sizeof(process_dbreg32) : sizeof(struct dbreg))

 +#ifndef PROC_MACHINE_ARCH
 +#define PROC_MACHINE_ARCH(p) machine_arch
 +#endif
 +
  /*
   * PROCLIST_FOREACH: iterate on the given proclist, skipping PK_MARKER ones.
   */
 Index: sys/kern/vfs_lookup.c
 ===================================================================
 RCS file: /cvsroot/src/sys/kern/vfs_lookup.c,v
 retrieving revision 1.233
 diff -p -u -r1.233 vfs_lookup.c
 --- sys/kern/vfs_lookup.c       9 Apr 2023 09:18:09 -0000       1.233
 +++ sys/kern/vfs_lookup.c       20 Apr 2023 06:49:21 -0000
 @@ -137,8 +137,8 @@ symlink_magic(struct proc *p, char *cp, 
                  * to frequency of use.
                  */
                 if (MATCH("machine_arch")) {
 -                       slen = VNL(MACHINE_ARCH);
 -                       SUBSTITUTE("machine_arch", MACHINE_ARCH, slen);
 +                       slen = strlen(PROC_MACHINE_ARCH(p));
 +                       SUBSTITUTE("machine_arch", PROC_MACHINE_ARCH(p), slen);
                 } else if (MATCH("machine")) {
                         slen = VNL(MACHINE);
                         SUBSTITUTE("machine", MACHINE, slen);


 # sysctl hw.machine_arch
 hw.machine_arch = earmv7hf

 .....
 t_magic_symlinks (1/1): 10 test cases
     domainname: [1.356511s] Passed.
     gid: [1.308785s] Passed.
     hostname: [1.307164s] Passed.
     machine: [1.304504s] Passed.
     machine_arch: [1.306524s] Passed.
     ostype: [1.303740s] Passed.
     realpath: [1.371548s] Passed.
     rgid: [1.301601s] Passed.
     ruid: [1.304645s] Passed.
     uid: [1.302798s] Passed.
 [13.199923s]


 -- 
                                 Michael van Elst
 Internet: mlelstv@serpens.de
                                 "A potential Snark may lurk in every tree."

From: "David H. Gutteridge" <david@gutteridge.ca>
To: Michael van Elst <mlelstv@serpens.de>
Cc: gnats-bugs@netbsd.org, martin@duskware.de
Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch
 fails on RPI02W/evbarm only
Date: Sun, 30 Apr 2023 20:57:26 -0400

 T24gVGh1LCAyMDIzLTA0LTIwIGF0IDA4OjUzICswMjAwLCBNaWNoYWVsIHZhbiBFbHN0IHdyb3Rl
 Ogo+IE9uIFRodSwgQXByIDIwLCAyMDIzIGF0IDA3OjE5OjUwQU0gKzAyMDAsIE1pY2hhZWwgdmFu
 IEVsc3Qgd3JvdGU6Cj4gCj4gPiBJIGd1ZXNzIHRoZSBvbmx5IGNvbnRyb3ZlcnNpYWwgdGhpbmcg
 d291bGQgYmUgdG8gbWFrZQo+ID4gUFJPQ19NQUNISU5FX0FSQ0gKPiA+IHNvbWV0aGluZyBtYWNo
 aW5lLWluZGVwZW5kZW50LCBpZiBpdCBzaG91bGQgYmUgaGlkZGVuIGJlaGluZCBhIG5ldwo+ID4g
 cHVibGljIHN5bWJvbCwgb3IgaWYgaXQgc2hvdWxkIGJlIGEgaGFjayBpbiB2ZnNfbG9va3VwLmMg
 OikKPiAKPiBUaGlzIGhlcmUgc2VlbXMgdG8gd29yazoKPiAKPiBJbmRleDogc3lzL3N5cy9wcm9j
 LmgKPiA9PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
 PT09PT09PT09PT09PT09Cj4gUkNTIGZpbGU6IC9jdnNyb290L3NyYy9zeXMvc3lzL3Byb2MuaCx2
 Cj4gcmV0cmlldmluZyByZXZpc2lvbiAxLjM3MAo+IGRpZmYgLXAgLXUgLXIxLjM3MCBwcm9jLmgK
 PiAtLS0gc3lzL3N5cy9wcm9jLmjCoMKgwqDCoMKgIDkgTWF5IDIwMjIgMTM6Mjc6MjQgLTAwMDDC
 oMKgwqDCoMKgwqAgMS4zNzAKPiArKysgc3lzL3N5cy9wcm9jLmjCoMKgwqDCoMKgIDIwIEFwciAy
 MDIzIDA2OjQ5OjIxIC0wMDAwCj4gQEAgLTU5Myw2ICs1OTMsMTAgQEAgX3Byb2NsaXN0X3NraXBt
 YXJrZXIoc3RydWN0IHByb2MgKnAwKQo+IMKgI2RlZmluZSBQUk9DX0RCUkVHU1oocCkgKCgocCkt
 PnBfZmxhZyAmIFBLXzMyKSA/IFwKPiDCoMKgwqDCoCBzaXplb2YocHJvY2Vzc19kYnJlZzMyKSA6
 IHNpemVvZihzdHJ1Y3QgZGJyZWcpKQo+IMKgCj4gKyNpZm5kZWYgUFJPQ19NQUNISU5FX0FSQ0gK
 PiArI2RlZmluZSBQUk9DX01BQ0hJTkVfQVJDSChwKSBtYWNoaW5lX2FyY2gKPiArI2VuZGlmCj4g
 Kwo+IMKgLyoKPiDCoCAqIFBST0NMSVNUX0ZPUkVBQ0g6IGl0ZXJhdGUgb24gdGhlIGdpdmVuIHBy
 b2NsaXN0LCBza2lwcGluZwo+IFBLX01BUktFUiBvbmVzLgo+IMKgICovCj4gSW5kZXg6IHN5cy9r
 ZXJuL3Zmc19sb29rdXAuYwo+ID09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
 PT09PT09PT09PT09PT09PT09PT09PT09PT09PT0KPiBSQ1MgZmlsZTogL2N2c3Jvb3Qvc3JjL3N5
 cy9rZXJuL3Zmc19sb29rdXAuYyx2Cj4gcmV0cmlldmluZyByZXZpc2lvbiAxLjIzMwo+IGRpZmYg
 LXAgLXUgLXIxLjIzMyB2ZnNfbG9va3VwLmMKPiAtLS0gc3lzL2tlcm4vdmZzX2xvb2t1cC5jwqDC
 oMKgwqDCoMKgIDkgQXByIDIwMjMgMDk6MTg6MDkgLTAwMDDCoMKgwqDCoMKgwqAgMS4yMzMKPiAr
 Kysgc3lzL2tlcm4vdmZzX2xvb2t1cC5jwqDCoMKgwqDCoMKgIDIwIEFwciAyMDIzIDA2OjQ5OjIx
 IC0wMDAwCj4gQEAgLTEzNyw4ICsxMzcsOCBAQCBzeW1saW5rX21hZ2ljKHN0cnVjdCBwcm9jICpw
 LCBjaGFyICpjcCwgCj4gwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqAgKiB0byBmcmVx
 dWVuY3kgb2YgdXNlLgo+IMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgICovCj4gwqDC
 oMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgIGlmIChNQVRDSCgibWFjaGluZV9hcmNoIikpIHsK
 PiAtwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqAgc2xlbiA9IFZO
 TChNQUNISU5FX0FSQ0gpOwo+IC3CoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDC
 oMKgwqDCoCBTVUJTVElUVVRFKCJtYWNoaW5lX2FyY2giLCBNQUNISU5FX0FSQ0gsCj4gc2xlbik7
 Cj4gK8KgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgIHNsZW4gPSBz
 dHJsZW4oUFJPQ19NQUNISU5FX0FSQ0gocCkpOwo+ICvCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDC
 oMKgwqDCoMKgwqDCoMKgwqDCoCBTVUJTVElUVVRFKCJtYWNoaW5lX2FyY2giLAo+IFBST0NfTUFD
 SElORV9BUkNIKHApLCBzbGVuKTsKPiDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqAgfSBl
 bHNlIGlmIChNQVRDSCgibWFjaGluZSIpKSB7Cj4gwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDC
 oMKgwqDCoMKgwqDCoMKgwqDCoCBzbGVuID0gVk5MKE1BQ0hJTkUpOwo+IMKgwqDCoMKgwqDCoMKg
 wqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqDCoMKgwqAgU1VCU1RJVFVURSgibWFjaGluZSIsIE1B
 Q0hJTkUsIHNsZW4pOwo+IAo+IAo+ICMgc3lzY3RsIGh3Lm1hY2hpbmVfYXJjaAo+IGh3Lm1hY2hp
 bmVfYXJjaCA9IGVhcm12N2hmCj4gCj4gLi4uLi4KPiB0X21hZ2ljX3N5bWxpbmtzICgxLzEpOiAx
 MCB0ZXN0IGNhc2VzCj4gwqDCoMKgIGRvbWFpbm5hbWU6IFsxLjM1NjUxMXNdIFBhc3NlZC4KPiDC
 oMKgwqAgZ2lkOiBbMS4zMDg3ODVzXSBQYXNzZWQuCj4gwqDCoMKgIGhvc3RuYW1lOiBbMS4zMDcx
 NjRzXSBQYXNzZWQuCj4gwqDCoMKgIG1hY2hpbmU6IFsxLjMwNDUwNHNdIFBhc3NlZC4KPiDCoMKg
 wqAgbWFjaGluZV9hcmNoOiBbMS4zMDY1MjRzXSBQYXNzZWQuCj4gwqDCoMKgIG9zdHlwZTogWzEu
 MzAzNzQwc10gUGFzc2VkLgo+IMKgwqDCoCByZWFscGF0aDogWzEuMzcxNTQ4c10gUGFzc2VkLgo+
 IMKgwqDCoCByZ2lkOiBbMS4zMDE2MDFzXSBQYXNzZWQuCj4gwqDCoMKgIHJ1aWQ6IFsxLjMwNDY0
 NXNdIFBhc3NlZC4KPiDCoMKgwqAgdWlkOiBbMS4zMDI3OThzXSBQYXNzZWQuCj4gWzEzLjE5OTky
 M3NdCgpNYWtlcyBzZW5zZSBhbmQgbG9va3MgZ29vZCB0byBtZS4KClRoYW5rcywKCkRhdmUKCg==

From: "David H. Gutteridge" <david@gutteridge.ca>
To: Michael van Elst <mlelstv@serpens.de>
Cc: gnats-bugs@netbsd.org, martin@duskware.de
Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch
 fails on RPI02W/evbarm only
Date: Sun, 30 Apr 2023 21:17:20 -0400

 (My newly upgraded email client ate/encoded that last response.)

 Makes sense and looks good to me.

 Thanks,

 Dave

From: "Michael van Elst" <mlelstv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57320 CVS commit: src/sys
Date: Mon, 1 May 2023 05:12:44 +0000

 Module Name:	src
 Committed By:	mlelstv
 Date:		Mon May  1 05:12:44 UTC 2023

 Modified Files:
 	src/sys/kern: vfs_lookup.c
 	src/sys/sys: proc.h

 Log Message:
 Default PROC_MACHINE_ARCH to machine_arch and use this for magic
 symlinks to resolve "@machine_arch".

 This keeps behaviour of magic symlinks and 'uname -p' output the same.
 Fixes PR 57320.


 To generate a diff of this commit:
 cvs rdiff -u -r1.233 -r1.234 src/sys/kern/vfs_lookup.c
 cvs rdiff -u -r1.370 -r1.371 src/sys/sys/proc.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: mlelstv@serpens.de (Michael van Elst)
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch fails on RPI02W/evbarm only
Date: Mon, 1 May 2023 05:13:10 -0000 (UTC)

 david@gutteridge.ca ("David H. Gutteridge") writes:

 >The following reply was made to PR kern/57320; it has been noted by GNATS.

 >From: "David H. Gutteridge" <david@gutteridge.ca>
 >To: Michael van Elst <mlelstv@serpens.de>
 >Cc: gnats-bugs@netbsd.org, martin@duskware.de
 >Subject: Re: kern/57320: ATF test case kernel/t_magic_symlinks:machine_arch
 > fails on RPI02W/evbarm only
 >Date: Sun, 30 Apr 2023 21:17:20 -0400

 > (My newly upgraded email client ate/encoded that last response.)
 > 
 > Makes sense and looks good to me.
 > 

 committed.

State-Changed-From-To: analyzed->needs-pullups
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 14 May 2023 01:36:14 +0000
State-Changed-Why:
this should probably get into -10


State-Changed-From-To: needs-pullups->pending-pullups
State-Changed-By: gutteridge@NetBSD.org
State-Changed-When: Tue, 23 May 2023 17:14:56 +0000
State-Changed-Why:
Pullup ticket #175.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57320 CVS commit: [netbsd-10] src/sys
Date: Sun, 28 May 2023 09:43:26 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun May 28 09:43:26 UTC 2023

 Modified Files:
 	src/sys/kern [netbsd-10]: vfs_lookup.c
 	src/sys/sys [netbsd-10]: proc.h

 Log Message:
 Pull up following revision(s) (requested by gutteridge in ticket #175):

 	sys/sys/proc.h: revision 1.371
 	sys/kern/vfs_lookup.c: revision 1.234

 Default PROC_MACHINE_ARCH to machine_arch and use this for magic
 symlinks to resolve "@machine_arch".

 This keeps behaviour of magic symlinks and 'uname -p' output the same.
 Fixes PR 57320.


 To generate a diff of this commit:
 cvs rdiff -u -r1.232 -r1.232.4.1 src/sys/kern/vfs_lookup.c
 cvs rdiff -u -r1.370 -r1.370.4.1 src/sys/sys/proc.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: gutteridge@NetBSD.org
State-Changed-When: Tue, 30 May 2023 00:09:52 +0000
State-Changed-Why:
Pulled up to netbsd-10. Closing.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2023 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.