Default PROC_MACHINE_ARCH to machine_arch and use this for magic symlinks to resolve "@machine_arch".

This keeps behaviour of magic symlinks and 'uname -p' output the same.
Fixes PR 57320.